<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolov5_ros</name>
  <version>0.1.0</version>
  <description>The yolov5_ros package</description>
  <maintainer email="ray255ar@gmail.com">Ar-Ray-code</maintainer>
  <license>GNU GENERAL PUBLIC LICENSE Version 3</license>
  <author email="ray255ar@gmail.com">Ar-Ray-code</author>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>        <!-- Use system OpenCV (better with cv_bridge) -->
  <exec_depend>python3-pil</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-requests</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>python3-seaborn</exec_depend>
  <exec_depend>python3-tqdm</exec_depend>
  <exec_depend>python3-pip</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>bboxes_ex_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
